--- a/templates/catalog_menu.html
+++ b/templates/catalog_menu.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>{{ catalog }} - Menu</title>
-</head>
-<body>
-	<a href="/login"><button>login</button></a>
-	<a href="/"><button>back</button></a>
-	<h2>{{ catalog }}</h2>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Catalog App - {{ catalog }}{% endblock %}
+{% block body %}
+	<div id="container" class="flex">
+		<aside>
+			<h3>Catagories</h3>
+			<ul>
+				{% for catalog in catalogs %}
+				<li>
+					<a class="orange" href="{{ url_for('catalog_posts', catalog=catalog) }}">
+						{{ catalogs[catalog] }}
+					</a>
+				</li>
+				{% endfor %}
+			</ul>
+		</aside>
+		<section>
+			{% if user %}
+			<a class="orange" href="/new">Add post</a>
+			{% endif %}
+
+			<h3>{{ catalogs[catalog] }} Posts ({{ posts|length }} Posts)</h3>
+			<ul>
+				{% for post in posts %}
+				<li>
+					<a class="orange" href="{{ url_for('post_detail', post_id=post.id) }}">
+						<span>{{ post.title }}</span>
+					</a>
+					<span style="color:gray">({{ catalogs[post.catalog] }})</span>
+				</li>
+				{% endfor %}
+			</ul>
+		</section>
+	</div>
+{% endblock %}
