--- a/templates/post_delete.html
+++ b/templates/post_delete.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Delete - {{ title }}</title>
-</head>
-<body>
-	<h2>Are you sure you want to DELETE the post?</h2>
-	<form method="delete">
-		<input type="submit" value="Delete">
-	</form>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Catalog App - Delete{% endblock %}
+{% block body %}
+	<div id="container">
+		<section>
+			<h3>Are you sure?</h3>
+			<form method="post">
+				<input type="submit" value="delete">
+			</form>
+			<a href="/"><button>Go back</button></a>
+		</section>
+	</div>
+{% endblock %}
