--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,105 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
+{% block static %}
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="//apis.google.com/js/platform.js?onload=start"> </script>
+{% endblock %}
 {% block body %}
-	<h3>Login</h3>
-	<form method="post">
-		<input name="email" type="text" placeholder="email"><br>
-		<input name="state" value="{{STATE}}" hidden>
-		<input type="submit" value="Login">
-	</form>
-	<span style="color: red">
-		{% if error=="missing" %}Missing field "email"{% endif %}
-		{% if error=="wrong" %}Field "email" not found{% endif %}
-	</span>
+	<div id="container">
+		<h3>Login</h3>
+		<div id="signinButton">
+			<span class="g-signin"
+				data-scope="openid email"
+				data-clientid="775283809230-19pjrc6p6p6rin1rv7rfaoq4ubgg0ol1.apps.googleusercontent.com"
+				data-redirecturi="postmessage"
+				data-accesstype="offline"
+				data-cookiepolicy="single_host_origin"
+				data-callback="googleSignInCallback"
+				data-approvalprompt="force">
+			</span>
+
+			<fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
+				<a href='javascript:sendTokenToServer()'>Login with Facebook</a>
+			</fb:login-button>
+		</div>
+		<div id="result"></div>
+		<br>
+	</div>
+	<script>
+		window.fbAsyncInit = function() {
+			FB.init({
+				appId  : '608899369481317',
+				cookie : true,
+				xfbml  : true,
+				version: 'v2.2'
+			});
+			FB.AppEvents.logPageView();
+		};
+
+		(function(d, s, id){
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) {return;}
+		js = d.createElement(s); js.id = id;
+		js.src = "https://connect.facebook.net/en_US/sdk.js";
+		fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+
+
+		function sendTokenToServer() {
+			var access_token = FB.getAuthResponse()['accessToken'];
+			console.log(access_token)
+			console.log('Welcome!  Fetching your information.... ');
+
+			FB.api('/me', function(response) {
+				console.log('Successful login for: ' + response.name);
+
+				$.ajax({
+					type: 'POST',
+					url: '/fbconnect?state={{STATE}}',
+					processData: false,
+					data: access_token,
+					contentType: 'application/octet-stream; charset=utf-8',
+					success: function(result) {
+						// Handle or verify the server response if necessary.
+						if (result) {
+							$("#result").html("Success. Redirecting ...");
+							setTimeout(function () {
+								window.location.href = "/";
+							}, 4000)
+						}
+						else {
+							$("#result").html("failed to make server-side call");
+						}
+					}
+				});
+			});
+		}
+
+		function googleSignInCallback(authResult) {
+			if (authResult["code"]) {
+				$("#signinButton").hide();
+				$.ajax({
+					type: "POST",
+					url: "/gconnect?state={{STATE}}",
+					processData: false,
+					contentType: "application/octet-steam;charset=utf-8",
+					data: authResult["code"],
+					success: function(result) {
+						if (result) {
+							$("#result").html("Success. Redirecting ...");
+							setTimeout(function () {
+								window.location.href = "/";
+							}, 4000)
+						}
+						else if (authResult["error"]) {
+							console.log(authResult["error"])
+						}
+						else {
+							$("#result").html("failed to make server-side call");
+						}
+					}
+				})
+			}
+		}
+	</script>
 {% endblock %}
